--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,7 @@
   user = pinkienort
   email = cantabilehisa@gmail.com
   pager = less -x2
-  excludesfile = /Users/hisakazu/.gitignore_global
+  # excludesfile = /Users/hisakazu/.gitignore_global
 [user]
   ae = pinkienort
   email = cantabilehisa@gmail.com
