--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,7 +12,7 @@ set-option -g mouse-select-pane on
 
 ##### Keybind
 unbind-key C-b
-set -g prefix C-g
+set -g prefix C-z
 set-window-option -g mode-keys vi
 bind C-h select-pane -L
 bind C-j select-pane -D
@@ -39,9 +39,8 @@ bind   -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 set    -g default-command "reattach-to-user-namespace -l /bin/bash"
 
 #### Plugin Manager
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tpm/tpm'
