--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,14 +5,15 @@ set-option -g default-terminal "screen-256color"
 # Behavior
 set -g escape-time 0
 set-option -g history-limit 5000
-set-option -gw mode-mouse on
-set-option -g mouse-utf8 on
-set-option -g mouse-resize-pane on
-set-option -g mouse-select-pane on
+# set-option -gw mode-mouse on
+# set-option -g mouse-utf8 on
+# set-option -g mouse-resize-pane on
+# set-option -g mouse-select-pane on
 
 ##### Keybind
 unbind-key C-b
-set -g prefix C-g
+set -g prefix C-z
+bind C-z send-prefix
 set-window-option -g mode-keys vi
 bind C-h select-pane -L
 bind C-j select-pane -D
@@ -31,17 +32,16 @@ bind % split-window -hc "#{pane_current_path}"
 bind '"' split-window -vc "#{pane_current_path}"
 
 # Copy(Select Mode)
-bind   -t vi-copy C-v   rectangle-toggle
-bind   -t vi-copy v     begin-selection
-bind   -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
-unbind -t vi-copy Enter
-bind   -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-set    -g default-command "reattach-to-user-namespace -l /bin/bash"
+# bind   -t vi-copy C-v   rectangle-toggle
+# bind   -t vi-copy v     begin-selection
+# bind   -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
+# unbind -t vi-copy Enter
+# bind   -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# set    -g default-command "reattach-to-user-namespace -l /bin/bash"
 
 #### Plugin Manager
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tpm/tpm'
