--- a/.gitconfig
+++ b/.gitconfig
@@ -1,8 +1,6 @@
 # This is Git's per-user configuration file.
 [core]
 # Please adapt and uncomment the following lines:
-  user = pinkienort
-  email = cantabilehisa@gmail.com
   pager = less -x2
   # excludesfile = /Users/hisakazu/.gitignore_global
 [user]
@@ -43,6 +41,7 @@
   chb = checkout -b
   cm = commit -m
   diff = diff --word-diff
+  push = push -u
   l = log --graph --date=short --decorate=short --pretty=format:'%Cgreen%h %Creset%cd %Cblue%cn %Cred%d %Creset%s'
   s = status
   today = log --oneline --since='12 hour ago'
