--- a/.tmux.mac.conf
+++ b/.tmux.mac.conf
@@ -31,12 +31,12 @@ bind % split-window -hc "#{pane_current_path}"
 bind '"' split-window -vc "#{pane_current_path}"
 
 # Copy(Select Mode)
-bind   -t vi-copy C-v   rectangle-toggle
-bind   -t vi-copy v     begin-selection
-bind   -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
-unbind -t vi-copy Enter
-bind   -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-set    -g default-command "reattach-to-user-namespace -l /bin/bash"
+# bind   -t vi-copy C-v   rectangle-toggle
+# bind   -t vi-copy v     begin-selection
+# bind   -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
+# unbind -t vi-copy Enter
+# bind   -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# set    -g default-command "reattach-to-user-namespace -l /bin/bash"
 
 #### Plugin Manager
 # set -g @plugin 'tmux-plugins/tpm'
