--- a/.gitconfig
+++ b/.gitconfig
@@ -2,11 +2,14 @@
 [core]
 # Please adapt and uncomment the following lines:
   pager = less -x2
+  autocrlf = input
+  quotepath = false
+  excludesfile = /Users/fukuoka-hisakazu/.gitignore
   # excludesfile = /Users/hisakazu/.gitignore_global
 [user]
   ae = pinkienort
-  email = cantabilehisa@gmail.com
   name = pinkienort
+  email = cantabilehisa@gmail.com
 [color]
   ui = auto
 [difftool "sourcetree"]
@@ -41,12 +44,19 @@
   chb = checkout -b
   cm = commit -m
   diff = diff --word-diff
+  pl = pull
+  ps = push -u
   push = push -u
+  f = fetch
   l = log --graph --date=short --decorate=short --pretty=format:'%Cgreen%h %Creset%cd %Cblue%cn %Cred%d %Creset%s'
   s = status
   today = log --oneline --since='12 hour ago'
   pretty = log --pretty=oneline -10
+  current-branch = ! git symbolic-ref HEAD | sed 's/refs\\/heads\\///'
+  pull-force = ! git reset --hard origin/$(git current-branch)
 [filter "lfs"]
   clean = git-lfs clean %f
   smudge = git-lfs smudge %f
   required = true
+[commit]
+	template = 
