--- a/.tmux.mac.conf
+++ b/.tmux.mac.conf
@@ -1,4 +1,18 @@
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin 'tmux-plugins/tmux-resurrect' # save/load session
+set -g @plugin 'tmux-plugins/tmux-continuum' # auto save/load session
+set -g @continuum-restore 'on'
+
+# Key bindings
+# prefix + Ctrl-s - save
+# prefix + Ctrl-r - restore
+# prefix + I - fetch the plugin and source it
+
+
 # Color
 set-option -g default-terminal "screen-256color"
 
@@ -14,6 +28,7 @@ set-option -g history-limit 5000
 unbind-key C-b
 set -g prefix C-z
 set-window-option -g mode-keys vi
+bind C-z send-keys C-z
 bind C-h select-pane -L
 bind C-j select-pane -D
 bind C-k select-pane -U
@@ -38,9 +53,7 @@ bind '"' split-window -vc "#{pane_current_path}"
 # bind   -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 # set    -g default-command "reattach-to-user-namespace -l /bin/bash"
 
-#### Plugin Manager
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
-
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-# run '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
+
+
