--- a/.tmux.mac.conf
+++ b/.tmux.mac.conf
@@ -27,6 +27,7 @@ set-option -g history-limit 5000
 ##### Keybind
 unbind-key C-b
 set -g prefix C-z
+bind-key C-z send-prefix
 set-window-option -g mode-keys vi
 bind C-z send-keys C-z
 bind C-h select-pane -L
