--- a/.tmux.mac.conf
+++ b/.tmux.mac.conf
@@ -1,23 +1,19 @@
 
-# List of plugins
+##### Plugins and settings
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
 set -g @plugin 'tmux-plugins/tmux-resurrect' # save/load session
-set -g @plugin 'tmux-plugins/tmux-continuum' # auto save/load session
-set -g @continuum-restore 'on'
-
-# Key bindings
 # prefix + Ctrl-s - save
 # prefix + Ctrl-r - restore
 # prefix + I - fetch the plugin and source it
-
-
-# Color
-set-option -g default-terminal "screen-256color"
-
-# Behavior
+set -g @plugin 'tmux-plugins/tmux-continuum' # auto save/load session
+set -g @continuum-restore 'on'
 set -g escape-time 0
+
+##### Options
+set-option -g default-terminal "screen-256color"
+set-option -g status-right "\"#H\" #(date +'%Y/%m/%d %H:%M:%S')"
+set-option -g status-interval 1
 set-option -g history-limit 5000
 # set-option -gw mode-mouse on
 # set-option -g mouse-utf8 on
