--- a/.vim/rc/dein/toml/plugins.toml
+++ b/.vim/rc/dein/toml/plugins.toml
@@ -160,6 +160,35 @@ hook_add = '''
 let g:autodirmake#is_confirm = 0 " No confirmation
 '''
 
+[[plugins]]
+repo = 'lighttiger2505/gtags.vim'
+hook_add = '''
+" Options
+let g:Gtags_Auto_Map = 0
+let g:Gtags_OpenQuickfixWindow = 1
+" Keymap
+" Show definetion of function cousor word on quickfix
+"nmap <silent> K :<C-u>exe("Gtags ".expand('<cword>'))<CR>
+" Show reference of cousor word on quickfix
+"nmap <silent> R :<C-u>exe("Gtags -r ".expand('<cword>'))<CR>
+'''
+
+[[plugins]]
+repo = 'jsfaint/gen_tags.vim'
+hook_add = '''
+let g:gen_tags#gtags_auto_gen = 1
+'''
+
+[[plugins]]
+repo = 'ozelentok/denite-gtags'
+hook_add = '''
+" Prefix key
+nmap [denite] <Nop>
+map <C-j> [denite]
+" Keymap
+nmap <silent> [denite]<C-D> :Denite -buffer-name=gtags_completion gtags_completion<cr>
+'''
+
 ### vim-scripts
 [[plugins]]
 repo = 'vim-scripts/AnsiEsc.vim'
@@ -179,4 +208,9 @@ hook_add = '''
 command! BufferList call BufferList()
 '''
 
+[[plugins]]
+repo = 'easymotion/vim-easymotion'
 
+[[plugins]]
+repo = 'Shougo/denite.nvim'
+if = 'has("python3")'
