--- a/.inputrc
+++ b/.inputrc
@@ -1,3 +1,7 @@
 set bell-style none
 set editing-mode vi
-set completion-ignore-case On
+set show-all-if-unmodified on
+set menu-complete-display-prefix on
+
+TAB: menu-complete
+"": complete
