--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,5 @@
-GIT_AUTHOR_NAME='pinkienort'
-GIT_AUTHOR_EMAIL='cantabilehisa@gmail.com'
-GIT_COMMITTER_NAME='pinkienort'
-GIT_COMMITTER_EMAIL='cantabilehisa@gmail.com'
-EMAIL='cantabilehisa@gmail.com'
+export GIT_AUTHOR_NAME='pinkienort'
+export GIT_AUTHOR_EMAIL='cantabilehisa@gmail.com'
+export GIT_COMMITTER_NAME='pinkienort'
+export GIT_COMMITTER_EMAIL='cantabilehisa@gmail.com'
+export EMAIL='cantabilehisa@gmail.com'
