tmux use only mac

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,26 @@
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect' # save/load session
+set -g @plugin 'tmux-plugins/tmux-continuum' # auto save/load session
+set -g @continuum-restore 'on'
+
+# Key bindings
+# prefix + Ctrl-s - save
+# prefix + Ctrl-r - restore
+# prefix + I - fetch the plugin and source it
+
 # Color
 set-option -g default-terminal "screen-256color"
 
 # Behavior
 set -g escape-time 0
+
+##### Options
+set-option -g default-terminal "screen-256color"
+set-option -g status-right "\"#H\" #(date +'%Y/%m/%d %H:%M:%S')"
+set-option -g status-interval 1
 set-option -g history-limit 5000
 # set-option -gw mode-mouse on
 # set-option -g mouse-utf8 on
@@ -13,8 +30,9 @@ set-option -g history-limit 5000
 ##### Keybind
 unbind-key C-b
 set -g prefix C-z
-bind C-z send-prefix
+bind-key C-z send-prefix
 set-window-option -g mode-keys vi
+bind C-z send-keys C-z
 bind C-h select-pane -L
 bind C-j select-pane -D
 bind C-k select-pane -U
@@ -39,9 +57,7 @@ bind '"' split-window -vc "#{pane_current_path}"
 # bind   -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 # set    -g default-command "reattach-to-user-namespace -l /bin/bash"
 
-#### Plugin Manager
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
-
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-# run '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
+
+
