--- a/.gitconfig
+++ b/.gitconfig
@@ -16,6 +16,7 @@
   a = add
   b = branch
   bs = ! git switch $(git branch | peco)
+  sb = ! git switch $(git branch | peco)
   c = commit
   cma = commit -a -m
   cancel = reset --soft HEAD^
@@ -29,6 +30,7 @@
   push = push -u
   f = fetch
   l = log --graph --date=short --decorate=short --pretty=format:'%Cgreen%h %Creset%cd %Cblue%cn %Cred%d %Creset%s'
+  dmb = ! git branch --merged | grep -v '\\*' | awk '{ print $1 }' | egrep -v '^main$' | xargs -I@ git branch -d @
   s = status
   sw = switch
   today = log --oneline --since='12 hour ago'
@@ -37,6 +39,20 @@
   pull-force = ! git reset --hard origin/$(git current-branch)
   branch-select = ! git branch -a | sed 's/^*/ /' | peco
   rs = restore
+	wta = "!f() { \
+			temp_file=$(mktemp); \
+			vim \"$temp_file\"; \
+			worktree_name=$(head -n 1 \"$temp_file\"); \
+			repo_path=$(git rev-parse --show-toplevel); \
+			git worktree add -f \"${repo_path}-${worktree_name}\" \"main\"; \
+			rm \"$temp_file\"; \
+	}; f"
+	wtl = "worktree list"
+	wtr = "!f() { \
+			selected=$(git worktree list | peco | awk \"{print \\$1}\"); \
+			git worktree remove \"$selected\"; \
+      echo removed \"$selected\" ; \
+	}; f"
 	ignore = "!gi() { curl -sL https://www.toptal.com/developers/gitignore/api/$@ ;}; gi"
 [filter "lfs"]
   clean = git-lfs clean -- %f
@@ -48,10 +64,12 @@
 [merge]
 	tool = vimdiff
 [user]
-	name = hisakazu
+	name = hisakaz0
 	email = cantabilehisa@gmail.com
 	signingkey = /Users/hisakazu/.ssh/id_ed25519.pub
 [init]
 	defaultBranch = main
 [gpg]
 	format = ssh
+[push]
+	autoSetupRemote = true
