--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,38 +1,40 @@
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect' # save/load session
-set -g @plugin 'tmux-plugins/tmux-continuum' # auto save/load session
-set -g @continuum-restore 'on'
-
-# Key bindings
-# prefix + Ctrl-s - save
-# prefix + Ctrl-r - restore
-# prefix + I - fetch the plugin and source it
-
-# Color
-set-option -g default-terminal "screen-256color"
-
-# Behavior
-set -g escape-time 0
-
+########################################
 ##### Options
-set-option -g default-terminal "screen-256color"
+########################################
+# TrueColorに対応するため
+set-option -g default-terminal "tmux-256color" # 基本的にはscreen-256colorかtmux-256colorを設定
+set-option -ga terminal-overrides ",$TERM:Tc" # tmuxを起動していない時のzshでの$TERMの値を指定
+
+
+# zshと同様の値。たくさん履歴を遡れるようにしておく
+set-option -g history-limit 10000
+
+# statusに秒数まで表示させる
 set-option -g status-right "\"#H\" #(date +'%Y/%m/%d %H:%M:%S')"
 set-option -g status-interval 1
-set-option -g history-limit 5000
-# set-option -gw mode-mouse on
-# set-option -g mouse-utf8 on
-# set-option -g mouse-resize-pane on
-# set-option -g mouse-select-pane on
 
+# トラックパッドで操作できるようにする
+# 感度高くて間違って選択してしまい、クリップボードが上書きされるためOFF
+# set-option -g mouse on
+
+# キー入力待ち時間。シュッと動けるように
+set -g escape-time 0
+
+########################################
 ##### Keybind
+########################################
+# Ctrl-Bが押しづらいので、Ctrl-Zにリマップ
+# shellのCtrl-Zと被るため、Ctrl-Zをもう一度入力するとCtrl-Zを送るように
 unbind-key C-b
 set -g prefix C-z
 bind-key C-z send-prefix
-set-window-option -g mode-keys vi
 bind C-z send-keys C-z
+
+# vim風に操作できるように
+set-window-option -g mode-keys vi
+
+# vim風にペインの移動ができるように
 bind C-h select-pane -L
 bind C-j select-pane -D
 bind C-k select-pane -U
@@ -41,23 +43,21 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind H select-pane -L
-bind J select-pane -D
-bind K select-pane -U
-bind L select-pane -R
+
+# ペインのサイズ変更
+bind H resize-pane -L 5
+bind J resize-pane -D 5
+bind K resize-pane -U 5
+bind L resize-pane -R 5
+
+
+# ウィンドウの作成
 bind c new-window -c "#{pane_current_path}"
+
+# 画面分割
 bind % split-window -hc "#{pane_current_path}"
 bind '"' split-window -vc "#{pane_current_path}"
 
-# Copy(Select Mode)
-# bind   -t vi-copy C-v   rectangle-toggle
-# bind   -t vi-copy v     begin-selection
-# bind   -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
-# unbind -t vi-copy Enter
-# bind   -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-# set    -g default-command "reattach-to-user-namespace -l /bin/bash"
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-
+# tmux.confの再読み込み
+bind r source-file ~/.tmux.conf \; display-message ".tmux.conf reloaded!"   
 
